# swagger.json
@@ -3,7 +3,7 @@
   "info": {
     "description": "This is a small CRUD service with REST API and a simple UI.",
     "version": "1.0.0",
-    "title": "Swagger NC_BackendChallenge3",
+    "title": "Swagger NC_BC_3",
     "termsOfService": "http://swagger.io/terms/",
     "contact": {
       "email": "apiteam@swagger.io"
@@ -24,7 +24,7 @@
     "http"
   ],
   "paths": {
-    "/account": {
+    "/account/create": {
       "post": {
         "tags": [
           "account"
@@ -40,7 +40,7 @@
           {
             "in": "body",
             "name": "body",
-            "description": "Created account object",
+            "description": "Create an account object",
             "required": true,
             "schema": {
               "$ref": "#/definitions/Account"
@@ -90,60 +90,21 @@
           }
         }
       },
-      "put": {
-        "tags": [
-          "account"
-        ],
-        "summary": "Update an account",
-        "description": "This can only be done by the logged in user.",
-        "operationId": "updateAccount",
-        "produces": [
-          "application/xml",
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "accountid",
-            "in": "path",
-            "description": "id of the account that needs to be updated",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Update account object",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Account"
-            }
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Invalid accountid supplied"
-          },
-          "404": {
-            "description": "Account not found"
-          }
-        }
-      },
       "delete": {
         "tags": [
           "account"
         ],
-        "summary": "Delete user",
-        "description": "This can only be done by the logged in user.",
-        "operationId": "deleteUser",
+        "summary": "Delete an account",
+        "description": "",
+        "operationId": "deleteAccount",
         "produces": [
           "application/xml",
           "application/json"
         ],
         "parameters": [
           {
-            "name": "username",
-            "in": "path",
-            "description": "The name that needs to be deleted",
+            "in": "path and the account id",
+            "description": "The id of the account to be deleted",
             "required": true,
             "type": "string"
           }
@@ -179,10 +140,6 @@
     "Account": {
       "type": "object",
       "properties": {
-        "id": {
-          "type": "integer",
-          "format": "int64"
-        },
         "email": {
           "type": "string"
         }
@@ -197,12 +154,6 @@
         "code": {
           "type": "integer",
           "format": "int32"
-        },
-        "type": {
-          "type": "string"
-        },
-        "message": {
-          "type": "string"
         }
       }
     }
